--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,49 @@
 # General dependencies
-beautifulsoup4
+beautifulsoup4>=4.12.3
 ffmpeg-python>=0.2.0
-numpy==1.23.5
-requests==2.31.0
-tqdm
-wget
+numpy>=1.24.4,<2.0.0  # Updated to support newer scipy, numba, and torch
+requests>=2.32.3
+tqdm>=4.66.5
+wget>=3.2
 
 # Audio processing
-faiss-cpu==1.7.3
-librosa==0.9.1
-pydub==0.25.1
-pyworld==0.3.4
-praat-parselmouth==0.4.2
-resampy==0.4.2
-scipy==1.11.1
-sounddevice==0.4.6
-soundfile==0.12.1
-torchaudio==2.1.1
-praat-parselmouth
-noisereduce
+faiss-cpu>=1.8.0  # Updated for compatibility
+librosa>=0.10.2.post1  # Updated for numpy and scipy compatibility
+pydub>=0.25.1
+pyworld>=0.3.4
+praat-parselmouth>=0.4.3  # Consolidated and updated
+resampy>=0.4.3
+scipy>=1.13.1  # Updated for numpy compatibility
+sounddevice>=0.5.0
+soundfile>=0.12.1
+torchaudio>=2.3.1  # Aligned with torch version
+noisereduce>=3.0.2
 
 # Machine learning
-git+https://github.com/IAHispano/fairseq; sys_platform == 'linux'
-fairseq==0.12.2; sys_platform == 'win32'
-numba; sys_platform == 'linux'
-numba==0.56.4; sys_platform == 'win32'
-onnxruntime
-onnxruntime_gpu==1.15.1
-torch==2.1.1
-torchcrepe==0.0.21
+git+https://github.com/IAHispano/fairseq@master; sys_platform == 'linux'  # Use latest commit
+fairseq>=0.12.2; sys_platform == 'win32'
+numba>=0.58.1; sys_platform == 'linux'  # Updated for numpy compatibility
+numba>=0.58.1; sys_platform == 'win32'
+onnxruntime>=1.19.2  # Updated for stability
+onnxruntime-gpu>=1.19.2; sys_platform != 'darwin'  # GPU version, excluding macOS
+torch>=2.3.1  # Updated for compatibility with torchaudio, torchvision
+torchcrepe>=0.0.23  # Updated for torch compatibility
 torchgen>=0.0.1
-torch_directml
-torchvision==0.16.1
-einops
-local-attention
+torch-directml>=0.2.3.dev241008; sys_platform == 'win32'  # Updated for DirectML
+torchvision>=0.18.1  # Aligned with torch version
+einops>=0.8.0
+local-attention>=1.9.15
 
 # Visualization
-matplotlib==3.7.2
-tensorboard
+matplotlib>=3.9.2  # Updated for numpy compatibility
+tensorboard>=2.17.1
 
 # Miscellaneous
-ffmpy==0.3.1
-tensorboardX
-edge-tts==6.1.9
+ffmpy>=0.4.0
+tensorboardX>=2.6.2.2
+edge-tts>=6.1.11
 
 # API
-pydantic
-fastapi
-uvicorn
+pydantic>=2.9.2
+fastapi>=0.115.0
+uvicorn>=0.30.6
