--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ ffmpeg-python>=0.2.0
 numpy>=1.24.4,<2.0.0  # Updated to support newer scipy, numba, and torch
 requests>=2.32.3
 tqdm>=4.66.5
-wget>=3.2
+wget
 
 # Audio processing
 faiss-cpu>=1.8.0  # Updated for compatibility
